# github-actions-example

./: .gitignore  CMakeLists.txt  README.md  example.py  main.cpp
.github/workflows/: clang-format.yml  cpp-test.yml  python-app.yml  python-test.yml
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  example.cpp  example.h  main.cpp
cpp/test/: CMakeLists.txt  example_test.cpp
